@@ -36,7 +36,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.env.NodeEnvironment.INDICES_FOLDER;
 import static org.elasticsearch.gateway.MetadataStateFormat.STATE_DIR_NAME;
@@ -57,9 +56,9 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
     }
 
     @Override
-    protected Settings nodeSettings(int nodeOrdinal) {
+    protected Settings nodeSettings(int nodeOrdinal, Settings otherSettings) {
         return Settings.builder()
-            .put(super.nodeSettings(nodeOrdinal))
+            .put(super.nodeSettings(nodeOrdinal, otherSettings))
             // prevent shards to move around after they got assigned the first time
             .put(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey(), EnableAllocationDecider.Rebalance.NONE)
             .build();
@@ -71,20 +70,24 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         ensureStableCluster(2 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 2)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-            .build());
+        createIndex(
+            indexName,
+            Settings.builder().put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 2).put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0).build()
+        );
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            client().admin()
+                .cluster()
+                .prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -102,18 +105,24 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
             for (Map.Entry<String, List<ShardRouting>> shardsByNode : shardsByNodes.entrySet()) {
                 final String nodeName = shardsByNode.getKey();
                 final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
-                assertTrue("Listener should have been notified of deletion of index " + index + " on node " + nodeName,
-                    plugin.deletedIndices.contains(index));
+                assertTrue(
+                    "Listener should have been notified of deletion of index " + index + " on node " + nodeName,
+                    plugin.deletedIndices.contains(index)
+                );
 
                 final List<ShardId> deletedShards = plugin.deletedShards.get(index);
                 assertThat(deletedShards, notNullValue());
-                assertFalse("Listener should have been notified of deletion of one or more shards on node " + nodeName,
-                    deletedShards.isEmpty());
+                assertFalse(
+                    "Listener should have been notified of deletion of one or more shards on node " + nodeName,
+                    deletedShards.isEmpty()
+                );
 
                 for (ShardRouting shardRouting : shardsByNode.getValue()) {
                     final ShardId shardId = shardRouting.shardId();
-                    assertTrue("Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
-                        deletedShards.contains(shardId));
+                    assertTrue(
+                        "Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
+                        deletedShards.contains(shardId)
+                    );
                 }
             }
         }, 30L, TimeUnit.SECONDS);
@@ -125,20 +134,27 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         ensureStableCluster(4 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
-            .build());
+        createIndex(
+            indexName,
+            Settings.builder()
+                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
+                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
+                .build()
+        );
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            client().admin()
+                .cluster()
+                .prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -150,10 +166,12 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         }
 
         final List<String> excludedNodes = randomSubsetOf(2, shardsByNodes.keySet());
-        assertAcked(client().admin().indices().prepareUpdateSettings(indexName)
-            .setSettings(Settings.builder()
-                .put("index.routing.allocation.exclude._name", String.join(",", excludedNodes))
-                .build()));
+        assertAcked(
+            client().admin()
+                .indices()
+                .prepareUpdateSettings(indexName)
+                .setSettings(Settings.builder().put("index.routing.allocation.exclude._name", String.join(",", excludedNodes)).build())
+        );
         ensureGreen(indexName);
 
         assertBusy(() -> {
@@ -162,18 +180,24 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
                 final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
 
                 if (excludedNodes.contains(nodeName)) {
-                    assertTrue("Listener should have been notified of deletion of index " + index + " on node " + nodeName,
-                        plugin.deletedIndices.contains(index));
+                    assertTrue(
+                        "Listener should have been notified of deletion of index " + index + " on node " + nodeName,
+                        plugin.deletedIndices.contains(index)
+                    );
 
                     final List<ShardId> deletedShards = plugin.deletedShards.get(index);
                     assertThat(deletedShards, notNullValue());
-                    assertFalse("Listener should have been notified of deletion of one or more shards on node " + nodeName,
-                        deletedShards.isEmpty());
+                    assertFalse(
+                        "Listener should have been notified of deletion of one or more shards on node " + nodeName,
+                        deletedShards.isEmpty()
+                    );
 
                     for (ShardRouting shardRouting : shardsByNode.getValue()) {
                         final ShardId shardId = shardRouting.shardId();
-                        assertTrue("Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
-                            deletedShards.contains(shardId));
+                        assertTrue(
+                            "Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
+                            deletedShards.contains(shardId)
+                        );
                     }
                 } else {
                     assertNoDeletions(nodeName);
@@ -188,20 +212,27 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         ensureStableCluster(4 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
-            .build());
+        createIndex(
+            indexName,
+            Settings.builder()
+                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
+                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
+                .build()
+        );
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            client().admin()
+                .cluster()
+                .prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -225,8 +256,10 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
 
         assertBusy(() -> {
             final IndexFoldersDeletionListenerPlugin plugin = plugin(restartedNode);
-            assertTrue("Listener should have been notified of deletion of index " + index + " on node " + restartedNode,
-                plugin.deletedIndices.contains(index));
+            assertTrue(
+                "Listener should have been notified of deletion of index " + index + " on node " + restartedNode,
+                plugin.deletedIndices.contains(index)
+            );
         }, 30L, TimeUnit.SECONDS);
     }
 
@@ -245,11 +278,14 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         logger.debug("--> creating [{}] leftover indices on data node [{}]", leftovers.length, dataNode);
         for (int i = 0; i < leftovers.length; i++) {
             final String indexName = "index-" + i;
-            createIndex(indexName, Settings.builder()
-                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                .put("index.routing.allocation.include._name", dataNode)
-                .build());
+            createIndex(
+                indexName,
+                Settings.builder()
+                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
+                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
+                    .put("index.routing.allocation.include._name", dataNode)
+                    .build()
+            );
             ensureGreen(indexName);
             leftovers[i] = internalCluster().clusterService(masterNode).state().metadata().index(indexName).getIndex();
         }
@@ -264,13 +300,19 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
 
         logger.debug("--> creating a new index [{}]", indexName);
-        assertAcked(client().admin().indices().prepareCreate(indexName).setSettings(
-            Settings.builder()
-                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.NONE)
-                .build())
-            .setWaitForActiveShards(ActiveShardCount.NONE));
+        assertAcked(
+            client().admin()
+                .indices()
+                .prepareCreate(indexName)
+                .setSettings(
+                    Settings.builder()
+                        .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
+                        .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
+                        .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.NONE)
+                        .build()
+                )
+                .setWaitForActiveShards(ActiveShardCount.NONE)
+        );
 
         final Index index = internalCluster().clusterService(masterNode).state().metadata().index(indexName).getIndex();
         logger.debug("--> index [{}] created", index);
@@ -289,25 +331,36 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         logger.debug("--> starting another data node with data paths [{}]", dataPaths);
         dataNode = internalCluster().startDataOnlyNode(
             Settings.builder()
-                .putList(Environment.PATH_DATA_SETTING.getKey(),
-                    dataPaths.stream().map(p -> p.toAbsolutePath().toString()).collect(Collectors.toList()))
+                .putList(Environment.PATH_DATA_SETTING.getKey(), dataPaths.stream().map(p -> p.toAbsolutePath().toString()).toList())
                 .putNull(Environment.PATH_SHARED_DATA_SETTING.getKey())
-                .build());
+                .build()
+        );
         ensureStableCluster(1 + 1, masterNode);
 
         final IndexFoldersDeletionListenerPlugin plugin = plugin(dataNode);
         assertTrue("Expecting no shards deleted on node " + dataNode, plugin.deletedShards.isEmpty());
 
-        assertAcked(client().admin().indices().prepareUpdateSettings(indexName).setSettings(Settings.builder()
-            .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.ALL)
-            .put("index.routing.allocation.require._name", dataNode)
-        ));
+        assertAcked(
+            client().admin()
+                .indices()
+                .prepareUpdateSettings(indexName)
+                .setSettings(
+                    Settings.builder()
+                        .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.ALL)
+                        .put("index.routing.allocation.require._name", dataNode)
+                )
+        );
         ensureGreen(indexName);
 
-        assertTrue("Listener should have been notified of deletion of left-over shards for index " + index + " on node " + dataNode,
-            plugin.deletedShards.containsKey(index));
-        assertThat("Listener should have been notified of [" + leftovers.length + "] deletions of left-over shard [0] on node " + dataNode,
-            plugin.deletedShards.get(index).size(), equalTo(leftovers.length));
+        assertTrue(
+            "Listener should have been notified of deletion of left-over shards for index " + index + " on node " + dataNode,
+            plugin.deletedShards.containsKey(index)
+        );
+        assertThat(
+            "Listener should have been notified of [" + leftovers.length + "] deletions of left-over shard [0] on node " + dataNode,
+            plugin.deletedShards.get(index).size(),
+            equalTo(leftovers.length)
+        );
     }
 
     private Map<String, List<ShardRouting>> shardRoutingsByNodes(ClusterState clusterState, Index index) {
@@ -361,9 +414,13 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
 
     private static void assertNoDeletions(String nodeName) {
         final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
-        assertTrue("Expecting no indices deleted on node [" + nodeName + "] but got: " + plugin.deletedIndices,
-            plugin.deletedIndices.isEmpty());
-        assertTrue("Expecting no shards deleted on node [" + nodeName + "] but got: " + plugin.deletedShards,
-            plugin.deletedShards.isEmpty());
+        assertTrue(
+            "Expecting no indices deleted on node [" + nodeName + "] but got: " + plugin.deletedIndices,
+            plugin.deletedIndices.isEmpty()
+        );
+        assertTrue(
+            "Expecting no shards deleted on node [" + nodeName + "] but got: " + plugin.deletedShards,
+            plugin.deletedShards.isEmpty()
+        );
     }
 }
