@@ -15,10 +15,10 @@ import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.time.DateFormatter;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.index.mapper.DynamicTemplate.XContentFieldType;
 import org.elasticsearch.index.mapper.MapperService.MergeReason;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -33,7 +33,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.xcontent.support.XContentMapValues.nodeBooleanValue;
 import static org.elasticsearch.index.mapper.TypeParsers.parseDateTimeFormatter;
@@ -52,25 +51,27 @@ public class RootObjectMapper extends ObjectMapper {
     static final String TOXCONTENT_SKIP_RUNTIME = "skip_runtime";
 
     public static class Defaults {
-        public static final DateFormatter[] DYNAMIC_DATE_TIME_FORMATTERS =
-                new DateFormatter[]{
-                        DateFieldMapper.DEFAULT_DATE_TIME_FORMATTER,
-                        DateFormatter.forPattern("yyyy/MM/dd HH:mm:ss||yyyy/MM/dd||epoch_millis")
-                };
-        public static final boolean DATE_DETECTION = true;
-        public static final boolean NUMERIC_DETECTION = false;
+        public static final Explicit<DateFormatter[]> DYNAMIC_DATE_TIME_FORMATTERS = new Explicit<>(
+            new DateFormatter[] {
+                DateFieldMapper.DEFAULT_DATE_TIME_FORMATTER,
+                DateFormatter.forPattern("yyyy/MM/dd HH:mm:ss||yyyy/MM/dd||epoch_millis") },
+            false
+        );
+        public static final Explicit<Boolean> DATE_DETECTION = Explicit.IMPLICIT_TRUE;
+        public static final Explicit<Boolean> NUMERIC_DETECTION = Explicit.IMPLICIT_FALSE;
+        private static final Explicit<DynamicTemplate[]> DYNAMIC_TEMPLATES = new Explicit<>(new DynamicTemplate[0], false);
     }
 
     public static class Builder extends ObjectMapper.Builder {
+        protected Explicit<DynamicTemplate[]> dynamicTemplates = Defaults.DYNAMIC_TEMPLATES;
+        protected Explicit<DateFormatter[]> dynamicDateTimeFormatters = Defaults.DYNAMIC_DATE_TIME_FORMATTERS;
 
-        protected Explicit<DynamicTemplate[]> dynamicTemplates = new Explicit<>(new DynamicTemplate[0], false);
-        protected Explicit<DateFormatter[]> dynamicDateTimeFormatters = new Explicit<>(Defaults.DYNAMIC_DATE_TIME_FORMATTERS, false);
-        protected Explicit<Boolean> dateDetection = new Explicit<>(Defaults.DATE_DETECTION, false);
-        protected Explicit<Boolean> numericDetection = new Explicit<>(Defaults.NUMERIC_DETECTION, false);
-        protected Map<String, RuntimeFieldType> runtimeFieldTypes;
+        protected final Map<String, RuntimeField> runtimeFields = new HashMap<>();
+        protected Explicit<Boolean> dateDetection = Defaults.DATE_DETECTION;
+        protected Explicit<Boolean> numericDetection = Defaults.NUMERIC_DETECTION;
 
-        public Builder(String name, Version indexCreatedVersion) {
-            super(name, indexCreatedVersion);
+        public Builder(String name) {
+            super(name);
         }
 
         public Builder dynamicDateTimeFormatter(Collection<DateFormatter> dateTimeFormatters) {
@@ -89,50 +90,56 @@ public class RootObjectMapper extends ObjectMapper {
             return this;
         }
 
-        public RootObjectMapper.Builder setRuntime(Map<String, RuntimeFieldType> runtimeFields) {
-            this.runtimeFieldTypes = runtimeFields;
+        public RootObjectMapper.Builder addRuntimeField(RuntimeField runtimeField) {
+            this.runtimeFields.put(runtimeField.name(), runtimeField);
+            return this;
+        }
+
+        public RootObjectMapper.Builder addRuntimeFields(Map<String, RuntimeField> runtimeFields) {
+            this.runtimeFields.putAll(runtimeFields);
             return this;
         }
 
         @Override
-        public RootObjectMapper build(ContentPath contentPath) {
-            return (RootObjectMapper) super.build(contentPath);
-        }
-
-        @Override
-        protected ObjectMapper createMapper(String name, String fullPath, Explicit<Boolean> enabled, Nested nested, Dynamic dynamic,
-                Map<String, Mapper> mappers, Version indexCreatedVersion) {
-            assert nested.isNested() == false;
-            return new RootObjectMapper(name, enabled, dynamic, mappers,
-                    runtimeFieldTypes == null ? Collections.emptyMap() : runtimeFieldTypes,
-                    dynamicDateTimeFormatters,
-                    dynamicTemplates,
-                    dateDetection, numericDetection, indexCreatedVersion);
+        public RootObjectMapper build(MapperBuilderContext context) {
+            return new RootObjectMapper(
+                name,
+                enabled,
+                dynamic,
+                buildMappers(true, context),
+                runtimeFields,
+                dynamicDateTimeFormatters,
+                dynamicTemplates,
+                dateDetection,
+                numericDetection
+            );
         }
     }
 
     /**
-     * Removes redundant root includes in {@link ObjectMapper.Nested} trees to avoid duplicate
+     * Removes redundant root includes in {@link NestedObjectMapper} trees to avoid duplicate
      * fields on the root mapper when {@code isIncludeInRoot} is {@code true} for a node that is
      * itself included into a parent node, for which either {@code isIncludeInRoot} is
      * {@code true} or which is transitively included in root by a chain of nodes with
      * {@code isIncludeInParent} returning {@code true}.
      */
+    // TODO it would be really nice to make this an implementation detail of NestedObjectMapper
+    // and run it as part of the builder, but this does not yet work because of the way that
+    // index templates are merged together. If merge() was run on Builder objects rather than
+    // on Mappers then we could move this.
     public void fixRedundantIncludes() {
-       fixRedundantIncludes(this, true);
+        fixRedundantIncludes(this, true);
     }
 
     private static void fixRedundantIncludes(ObjectMapper objectMapper, boolean parentIncluded) {
         for (Mapper mapper : objectMapper) {
-            if (mapper instanceof ObjectMapper) {
-                ObjectMapper child = (ObjectMapper) mapper;
-                Nested nested = child.nested();
-                boolean isNested = nested.isNested();
-                boolean includeInRootViaParent = parentIncluded && isNested && nested.isIncludeInParent();
-                boolean includedInRoot = isNested && nested.isIncludeInRoot();
+            if (mapper instanceof NestedObjectMapper child) {
+                boolean isNested = child.isNested();
+                boolean includeInRootViaParent = parentIncluded && isNested && child.isIncludeInParent();
+                boolean includedInRoot = isNested && child.isIncludeInRoot();
                 if (includeInRootViaParent && includedInRoot) {
-                    nested.setIncludeInParent(true);
-                    nested.setIncludeInRoot(false);
+                    child.setIncludeInParent(true);
+                    child.setIncludeInRoot(false);
                 }
                 fixRedundantIncludes(child, includeInRootViaParent || includedInRoot);
             }
@@ -142,16 +149,16 @@ public class RootObjectMapper extends ObjectMapper {
     static final class TypeParser extends ObjectMapper.TypeParser {
 
         @Override
-        public RootObjectMapper.Builder parse(String name, Map<String, Object> node, ParserContext parserContext)
+        public RootObjectMapper.Builder parse(String name, Map<String, Object> node, MappingParserContext parserContext)
             throws MapperParsingException {
-            RootObjectMapper.Builder builder = new Builder(name, parserContext.indexVersionCreated());
+            RootObjectMapper.Builder builder = new Builder(name);
             Iterator<Map.Entry<String, Object>> iterator = node.entrySet().iterator();
             while (iterator.hasNext()) {
                 Map.Entry<String, Object> entry = iterator.next();
                 String fieldName = entry.getKey();
                 Object fieldNode = entry.getValue();
                 if (parseObjectOrDocumentTypeProperties(fieldName, fieldNode, parserContext, builder)
-                        || processField(builder, fieldName, fieldNode, parserContext)) {
+                    || processField(builder, fieldName, fieldNode, parserContext)) {
                     iterator.remove();
                 }
             }
@@ -159,13 +166,18 @@ public class RootObjectMapper extends ObjectMapper {
         }
 
         @SuppressWarnings("unchecked")
-        private boolean processField(RootObjectMapper.Builder builder, String fieldName, Object fieldNode, ParserContext parserContext) {
+        private static boolean processField(
+            RootObjectMapper.Builder builder,
+            String fieldName,
+            Object fieldNode,
+            MappingParserContext parserContext
+        ) {
             if (fieldName.equals("date_formats") || fieldName.equals("dynamic_date_formats")) {
                 if (fieldNode instanceof List) {
                     List<DateFormatter> formatters = new ArrayList<>();
                     for (Object formatter : (List<?>) fieldNode) {
                         if (formatter.toString().startsWith("epoch_")) {
-                            throw new MapperParsingException("Epoch ["+ formatter +"] is not supported as dynamic date format");
+                            throw new MapperParsingException("Epoch [" + formatter + "] is not supported as dynamic date format");
                         }
                         formatters.add(parseDateTimeFormatter(formatter));
                     }
@@ -208,14 +220,19 @@ public class RootObjectMapper extends ObjectMapper {
                 builder.dynamicTemplates(templates);
                 return true;
             } else if (fieldName.equals("date_detection")) {
-                builder.dateDetection = new Explicit<>(nodeBooleanValue(fieldNode, "date_detection"), true);
+                builder.dateDetection = Explicit.explicitBoolean(nodeBooleanValue(fieldNode, "date_detection"));
                 return true;
             } else if (fieldName.equals("numeric_detection")) {
-                builder.numericDetection = new Explicit<>(nodeBooleanValue(fieldNode, "numeric_detection"), true);
+                builder.numericDetection = Explicit.explicitBoolean(nodeBooleanValue(fieldNode, "numeric_detection"));
                 return true;
             } else if (fieldName.equals("runtime")) {
                 if (fieldNode instanceof Map) {
-                    builder.setRuntime(RuntimeFieldType.parseRuntimeFields((Map<String, Object>) fieldNode, parserContext, true));
+                    Map<String, RuntimeField> fields = RuntimeField.parseRuntimeFields(
+                        (Map<String, Object>) fieldNode,
+                        parserContext,
+                        true
+                    );
+                    builder.addRuntimeFields(fields);
                     return true;
                 } else {
                     throw new ElasticsearchParseException("runtime must be a map type");
@@ -229,14 +246,21 @@ public class RootObjectMapper extends ObjectMapper {
     private Explicit<Boolean> dateDetection;
     private Explicit<Boolean> numericDetection;
     private Explicit<DynamicTemplate[]> dynamicTemplates;
-    private Map<String, RuntimeFieldType> runtimeFieldTypes;
+    private Map<String, RuntimeField> runtimeFields;
 
-    RootObjectMapper(String name, Explicit<Boolean> enabled, Dynamic dynamic, Map<String, Mapper> mappers,
-                     Map<String, RuntimeFieldType> runtimeFieldTypes,
-                     Explicit<DateFormatter[]> dynamicDateTimeFormatters, Explicit<DynamicTemplate[]> dynamicTemplates,
-                     Explicit<Boolean> dateDetection, Explicit<Boolean> numericDetection, Version indexCreatedVersion) {
-        super(name, name, enabled, Nested.NO, dynamic, mappers, indexCreatedVersion);
-        this.runtimeFieldTypes = runtimeFieldTypes;
+    RootObjectMapper(
+        String name,
+        Explicit<Boolean> enabled,
+        Dynamic dynamic,
+        Map<String, Mapper> mappers,
+        Map<String, RuntimeField> runtimeFields,
+        Explicit<DateFormatter[]> dynamicDateTimeFormatters,
+        Explicit<DynamicTemplate[]> dynamicTemplates,
+        Explicit<Boolean> dateDetection,
+        Explicit<Boolean> numericDetection
+    ) {
+        super(name, name, enabled, dynamic, mappers);
+        this.runtimeFields = runtimeFields;
         this.dynamicTemplates = dynamicTemplates;
         this.dynamicDateTimeFormatters = dynamicDateTimeFormatters;
         this.dateDetection = dateDetection;
@@ -246,57 +270,52 @@ public class RootObjectMapper extends ObjectMapper {
     @Override
     protected ObjectMapper clone() {
         ObjectMapper clone = super.clone();
-        ((RootObjectMapper) clone).runtimeFieldTypes = new HashMap<>(this.runtimeFieldTypes);
+        ((RootObjectMapper) clone).runtimeFields = new HashMap<>(this.runtimeFields);
         return clone;
     }
 
     @Override
-    RootObjectMapper copyAndReset() {
-        RootObjectMapper copy = (RootObjectMapper) super.copyAndReset();
-        // for dynamic updates, no need to carry root-specific options, we just
-        // set everything to their implicit default value so that they are not
-        // applied at merge time
-        copy.dynamicTemplates = new Explicit<>(new DynamicTemplate[0], false);
-        copy.dynamicDateTimeFormatters = new Explicit<>(Defaults.DYNAMIC_DATE_TIME_FORMATTERS, false);
-        copy.dateDetection = new Explicit<>(Defaults.DATE_DETECTION, false);
-        copy.numericDetection = new Explicit<>(Defaults.NUMERIC_DETECTION, false);
-        //also no need to carry the already defined runtime fields, only new ones need to be added
-        copy.runtimeFieldTypes.clear();
-        return copy;
+    public RootObjectMapper.Builder newBuilder(Version indexVersionCreated) {
+        RootObjectMapper.Builder builder = new RootObjectMapper.Builder(name());
+        builder.enabled = enabled;
+        builder.dynamic = dynamic;
+        return builder;
     }
 
-    boolean dateDetection() {
+    /**
+     * Public API
+     */
+    public boolean dateDetection() {
         return this.dateDetection.value();
     }
 
-    boolean numericDetection() {
+    /**
+     * Public API
+     */
+    public boolean numericDetection() {
         return this.numericDetection.value();
     }
 
-    DateFormatter[] dynamicDateTimeFormatters() {
+    /**
+     * Public API
+     */
+    public DateFormatter[] dynamicDateTimeFormatters() {
         return dynamicDateTimeFormatters.value();
     }
 
-    DynamicTemplate[] dynamicTemplates() {
+    /**
+     * Public API
+     */
+    public DynamicTemplate[] dynamicTemplates() {
         return dynamicTemplates.value();
     }
 
-    Collection<RuntimeFieldType> runtimeFieldTypes() {
-        return runtimeFieldTypes.values();
+    Collection<RuntimeField> runtimeFields() {
+        return runtimeFields.values();
     }
 
-    RuntimeFieldType getRuntimeFieldType(String name) {
-        return runtimeFieldTypes.get(name);
-    }
-
-    public DynamicTemplate findTemplate(ContentPath path, String name, XContentFieldType matchType) {
-        final String pathAsString = path.pathAsText(name);
-        for (DynamicTemplate dynamicTemplate : dynamicTemplates.value()) {
-            if (dynamicTemplate.match(pathAsString, name, matchType)) {
-                return dynamicTemplate;
-            }
-        }
-        return null;
+    RuntimeField getRuntimeField(String name) {
+        return runtimeFields.get(name);
     }
 
     @Override
@@ -336,19 +355,13 @@ public class RootObjectMapper extends ObjectMapper {
                 this.dynamicTemplates = mergeWithObject.dynamicTemplates;
             }
         }
-        assert this.runtimeFieldTypes != mergeWithObject.runtimeFieldTypes;
-        for (Map.Entry<String, RuntimeFieldType> runtimeField : mergeWithObject.runtimeFieldTypes.entrySet()) {
+        assert this.runtimeFields != mergeWithObject.runtimeFields;
+        for (Map.Entry<String, RuntimeField> runtimeField : mergeWithObject.runtimeFields.entrySet()) {
             if (runtimeField.getValue() == null) {
-                this.runtimeFieldTypes.remove(runtimeField.getKey());
+                this.runtimeFields.remove(runtimeField.getKey());
             } else {
-                this.runtimeFieldTypes.put(runtimeField.getKey(), runtimeField.getValue());
+                this.runtimeFields.put(runtimeField.getKey(), runtimeField.getValue());
             }
-        }
-    }
-
-    void addRuntimeFields(Collection<RuntimeFieldType> runtimeFields) {
-        for (RuntimeFieldType runtimeField : runtimeFields) {
-            this.runtimeFieldTypes.put(runtimeField.name(), runtimeField);
         }
     }
 
@@ -381,88 +394,77 @@ public class RootObjectMapper extends ObjectMapper {
             builder.field("numeric_detection", numericDetection.value());
         }
 
-        if (runtimeFieldTypes.size() > 0 && params.paramAsBoolean(TOXCONTENT_SKIP_RUNTIME, false) == false) {
+        if (runtimeFields.size() > 0 && params.paramAsBoolean(TOXCONTENT_SKIP_RUNTIME, false) == false) {
             builder.startObject("runtime");
-            List<RuntimeFieldType> sortedRuntimeFieldTypes = runtimeFieldTypes.values().stream().sorted(
-                Comparator.comparing(RuntimeFieldType::name)).collect(Collectors.toList());
-            for (RuntimeFieldType fieldType : sortedRuntimeFieldTypes) {
+            List<RuntimeField> sortedRuntimeFields = runtimeFields.values()
+                .stream()
+                .sorted(Comparator.comparing(RuntimeField::name))
+                .toList();
+            for (RuntimeField fieldType : sortedRuntimeFields) {
                 fieldType.toXContent(builder, params);
             }
             builder.endObject();
         }
     }
 
-    private static void validateDynamicTemplate(Mapper.TypeParser.ParserContext parserContext,
-                                                DynamicTemplate template) {
+    private static void validateDynamicTemplate(MappingParserContext parserContext, DynamicTemplate template) {
 
         if (containsSnippet(template.getMapping(), "{name}")) {
             // Can't validate template, because field names can't be guessed up front.
             return;
         }
 
-        final XContentFieldType[] types;
-        if (template.getXContentFieldType() != null) {
-            types = new XContentFieldType[]{template.getXContentFieldType()};
-        } else if (template.isRuntimeMapping()) {
-            types = Arrays.stream(XContentFieldType.values()).filter(XContentFieldType::supportsRuntimeField)
-                .toArray(XContentFieldType[]::new);
-        } else {
-            types = XContentFieldType.values();
-        }
+        final XContentFieldType[] types = template.getXContentFieldTypes();
 
         Exception lastError = null;
-        boolean dynamicTemplateInvalid = true;
 
         for (XContentFieldType fieldType : types) {
             String dynamicType = template.isRuntimeMapping() ? fieldType.defaultRuntimeMappingType() : fieldType.defaultMappingType();
             String mappingType = template.mappingType(dynamicType);
             try {
                 if (template.isRuntimeMapping()) {
-                    RuntimeFieldType.Parser parser = parserContext.runtimeFieldTypeParser(mappingType);
+                    RuntimeField.Parser parser = parserContext.runtimeFieldParser(mappingType);
                     if (parser == null) {
-                        lastError = new IllegalArgumentException("No runtime field found for type [" + mappingType + "]");
-                        continue;
+                        throw new IllegalArgumentException("No runtime field found for type [" + mappingType + "]");
                     }
                     validate(template, dynamicType, (name, mapping) -> parser.parse(name, mapping, parserContext));
                 } else {
                     Mapper.TypeParser typeParser = parserContext.typeParser(mappingType);
                     if (typeParser == null) {
-                        lastError = new IllegalArgumentException("No mapper found for type [" + mappingType + "]");
-                        continue;
+                        throw new IllegalArgumentException("No mapper found for type [" + mappingType + "]");
                     }
-                    validate(template, dynamicType,
-                        (name, mapping) -> typeParser.parse(name, mapping, parserContext).build(new ContentPath(1)));
+                    validate(
+                        template,
+                        dynamicType,
+                        (name, mapping) -> typeParser.parse(name, mapping, parserContext).build(MapperBuilderContext.ROOT)
+                    );
                 }
-                dynamicTemplateInvalid = false;
+                lastError = null; // ok, the template is valid for at least one type
                 break;
-            } catch(Exception e) {
+            } catch (Exception e) {
                 lastError = e;
             }
         }
-
-        final boolean failInvalidDynamicTemplates = parserContext.indexVersionCreated().onOrAfter(Version.V_8_0_0);
-        if (dynamicTemplateInvalid) {
-            String format = "dynamic template [%s] has invalid content [%s], " +
-                "attempted to validate it with the following match_mapping_type: %s";
-            String message = String.format(Locale.ROOT, format, template.getName(), Strings.toString(template),
-                Arrays.toString(types));
+        if (lastError != null) {
+            String format = "dynamic template [%s] has invalid content [%s], "
+                + "attempted to validate it with the following match_mapping_type: %s";
+            String message = String.format(Locale.ROOT, format, template.getName(), Strings.toString(template), Arrays.toString(types));
+            final boolean failInvalidDynamicTemplates = parserContext.indexVersionCreated().onOrAfter(Version.V_8_0_0);
             if (failInvalidDynamicTemplates) {
                 throw new IllegalArgumentException(message, lastError);
             } else {
-                final String deprecationMessage;
-                if (lastError != null) {
-                     deprecationMessage = String.format(Locale.ROOT, "%s, last error: [%s]", message, lastError.getMessage());
-                } else {
-                    deprecationMessage = message;
-                }
-                DEPRECATION_LOGGER.deprecate(DeprecationCategory.TEMPLATES, "invalid_dynamic_template", deprecationMessage);
+                DEPRECATION_LOGGER.warn(
+                    DeprecationCategory.TEMPLATES,
+                    "invalid_dynamic_template",
+                    "{}, last error: [{}]",
+                    message,
+                    lastError.getMessage()
+                );
             }
         }
     }
 
-    private static void validate(DynamicTemplate template,
-                                 String dynamicType,
-                                 BiConsumer<String, Map<String, Object>> mappingConsumer) {
+    private static void validate(DynamicTemplate template, String dynamicType, BiConsumer<String, Map<String, Object>> mappingConsumer) {
         String templateName = "__dynamic__" + template.name();
         Map<String, Object> fieldTypeConfig = template.mappingForName(templateName, dynamicType);
         mappingConsumer.accept(templateName, fieldTypeConfig);
