@@ -8,11 +8,10 @@
 
 package org.elasticsearch.search.aggregations.metrics;
 
-import org.elasticsearch.common.xcontent.ObjectParser;
-import org.elasticsearch.common.xcontent.XContentParser;
+import org.elasticsearch.xcontent.ObjectParser;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
 
 public class ParsedHDRPercentiles extends ParsedPercentiles implements Percentiles {
 
@@ -31,8 +30,11 @@ public class ParsedHDRPercentiles extends ParsedPercentiles implements Percentil
         return getPercentileAsString(percent);
     }
 
-    private static final ObjectParser<ParsedHDRPercentiles, Void> PARSER =
-            new ObjectParser<>(ParsedHDRPercentiles.class.getSimpleName(), true, ParsedHDRPercentiles::new);
+    private static final ObjectParser<ParsedHDRPercentiles, Void> PARSER = new ObjectParser<>(
+        ParsedHDRPercentiles.class.getSimpleName(),
+        true,
+        ParsedHDRPercentiles::new
+    );
     static {
         ParsedPercentiles.declarePercentilesFields(PARSER);
     }
@@ -50,6 +52,6 @@ public class ParsedHDRPercentiles extends ParsedPercentiles implements Percentil
 
     @Override
     public Iterable<String> valueNames() {
-        return percentiles.keySet().stream().map(d -> d.toString()).collect(Collectors.toList());
+        return percentiles.keySet().stream().map(d -> d.toString()).toList();
     }
 }
