@@ -8,13 +8,13 @@
 
 package org.elasticsearch.rest;
 
-import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.indices.breaker.CircuitBreakerService;
 import org.elasticsearch.indices.breaker.HierarchyCircuitBreakerService;
+import org.elasticsearch.rest.RestHandler.Route;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.rest.FakeRestChannel;
 import org.elasticsearch.test.rest.FakeRestRequest;
@@ -24,7 +24,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -49,7 +48,7 @@ public class RestHttpResponseHeadersTests extends ESTestCase {
          * method list, passing in the RandomizedContext's Random instance,
          * before picking out a candidate sublist.
          */
-        List<RestRequest.Method> validHttpMethodArray = new ArrayList<RestRequest.Method>(Arrays.asList(RestRequest.Method.values()));
+        List<RestRequest.Method> validHttpMethodArray = new ArrayList<>(Arrays.asList(RestRequest.Method.values()));
         validHttpMethodArray.remove(RestRequest.Method.OPTIONS);
         Collections.shuffle(validHttpMethodArray, random());
 
@@ -58,42 +57,36 @@ public class RestHttpResponseHeadersTests extends ESTestCase {
          * the array, so we are guaranteed at least one invalid method to test.
          */
         validHttpMethodArray = validHttpMethodArray.subList(0, randomIntBetween(1, validHttpMethodArray.size() - 1));
-        assert(validHttpMethodArray.size() > 0);
-        assert(validHttpMethodArray.size() < RestRequest.Method.values().length);
+        assert (validHttpMethodArray.size() > 0);
+        assert (validHttpMethodArray.size() < RestRequest.Method.values().length);
 
         /*
          * Generate an inverse list of one or more candidate invalid HTTP
          * methods, so we have a candidate method to fire at the test endpoint.
          */
-        List<RestRequest.Method> invalidHttpMethodArray = new ArrayList<RestRequest.Method>(Arrays.asList(RestRequest.Method.values()));
+        List<RestRequest.Method> invalidHttpMethodArray = new ArrayList<>(Arrays.asList(RestRequest.Method.values()));
         invalidHttpMethodArray.removeAll(validHttpMethodArray);
         // Remove OPTIONS, or else we'll get a 200 instead of 405
         invalidHttpMethodArray.remove(RestRequest.Method.OPTIONS);
-        assert(invalidHttpMethodArray.size() > 0);
+        assert (invalidHttpMethodArray.size() > 0);
 
         // Initialize test candidate RestController
-        CircuitBreakerService circuitBreakerService = new HierarchyCircuitBreakerService(Settings.EMPTY,
-                Collections.emptyList(),
-                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS));
+        CircuitBreakerService circuitBreakerService = new HierarchyCircuitBreakerService(
+            Settings.EMPTY,
+            Collections.emptyList(),
+            new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
+        );
 
         final Settings settings = Settings.EMPTY;
         UsageService usageService = new UsageService();
-        RestController restController = new RestController(Collections.emptySet(),
-                null, null, circuitBreakerService, usageService);
+        RestController restController = new RestController(Collections.emptySet(), null, null, circuitBreakerService, usageService);
 
         // A basic RestHandler handles requests to the endpoint
-        RestHandler restHandler = new RestHandler() {
-
-            @Override
-            public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {
-                channel.sendResponse(new TestResponse());
-            }
-
-        };
+        RestHandler restHandler = (request, channel, client) -> channel.sendResponse(new TestResponse());
 
         // Register valid test handlers with test RestController
         for (RestRequest.Method method : validHttpMethodArray) {
-            restController.registerHandler(method, "/", restHandler);
+            restController.registerHandler(new Route(method, "/"), restHandler);
         }
 
         // Generate a test request with an invalid HTTP method
@@ -141,7 +134,7 @@ public class RestHttpResponseHeadersTests extends ESTestCase {
      * compared with the expected 'Allow' header String array.
      */
     private List<String> getMethodNameStringArray(List<RestRequest.Method> methodArray) {
-        return methodArray.stream().map(method -> method.toString()).collect(Collectors.toList());
+        return methodArray.stream().map(method -> method.toString()).toList();
     }
 
 }
