@@ -6,31 +6,32 @@
  */
 package org.elasticsearch.xpack.idp.saml.rest.action;
 
-import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.common.ParseField;
-import org.elasticsearch.common.xcontent.ObjectParser;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.ObjectParser;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestAction;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestRequest;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
 
 public class RestSamlValidateAuthenticationRequestAction extends IdpBaseRestHandler {
 
-    static final ObjectParser<SamlValidateAuthnRequestRequest, Void> PARSER =
-        new ObjectParser<>("idp_validate_authn_request", SamlValidateAuthnRequestRequest::new);
+    static final ObjectParser<SamlValidateAuthnRequestRequest, Void> PARSER = new ObjectParser<>(
+        "idp_validate_authn_request",
+        SamlValidateAuthnRequestRequest::new
+    );
 
     static {
         PARSER.declareString(SamlValidateAuthnRequestRequest::setQueryString, new ParseField("authn_request_query"));
@@ -47,14 +48,16 @@ public class RestSamlValidateAuthenticationRequestAction extends IdpBaseRestHand
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(new Route(POST, "/_idp/saml/validate"));
+        return List.of(new Route(POST, "/_idp/saml/validate"));
     }
 
     @Override
     protected RestChannelConsumer innerPrepareRequest(RestRequest request, NodeClient client) throws IOException {
         try (XContentParser parser = request.contentParser()) {
             final SamlValidateAuthnRequestRequest validateRequest = PARSER.parse(parser, null);
-            return channel -> client.execute(SamlValidateAuthnRequestAction.INSTANCE, validateRequest,
+            return channel -> client.execute(
+                SamlValidateAuthnRequestAction.INSTANCE,
+                validateRequest,
                 new RestBuilderListener<SamlValidateAuthnRequestResponse>(channel) {
                     @Override
                     public RestResponse buildResponse(SamlValidateAuthnRequestResponse response, XContentBuilder builder) throws Exception {
@@ -68,7 +71,8 @@ public class RestSamlValidateAuthenticationRequestAction extends IdpBaseRestHand
                         builder.endObject();
                         return new BytesRestResponse(RestStatus.OK, builder);
                     }
-                });
+                }
+            );
         }
     }
 }
