@@ -6,21 +6,21 @@
  */
 package org.elasticsearch.xpack.security.rest.action.rolemapping;
 
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.security.action.rolemapping.DeleteRoleMappingRequestBuilder;
 import org.elasticsearch.xpack.core.security.action.rolemapping.DeleteRoleMappingResponse;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.DELETE;
@@ -36,14 +36,10 @@ public class RestDeleteRoleMappingAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
-            new ReplacedRoute(DELETE, "/_security/role_mapping/{name}", DELETE, "/_xpack/security/role_mapping/{name}")
+        return List.of(
+            Route.builder(DELETE, "/_security/role_mapping/{name}")
+                .replaces(DELETE, "/_xpack/security/role_mapping/{name}", RestApiVersion.V_7)
+                .build()
         );
     }
 
@@ -57,14 +53,15 @@ public class RestDeleteRoleMappingAction extends SecurityBaseRestHandler {
         final String name = request.param("name");
         final String refresh = request.param("refresh");
 
-        return channel -> new DeleteRoleMappingRequestBuilder(client)
-            .name(name)
+        return channel -> new DeleteRoleMappingRequestBuilder(client).name(name)
             .setRefreshPolicy(refresh)
             .execute(new RestBuilderListener<>(channel) {
                 @Override
                 public RestResponse buildResponse(DeleteRoleMappingResponse response, XContentBuilder builder) throws Exception {
-                    return new BytesRestResponse(response.isFound() ? RestStatus.OK : RestStatus.NOT_FOUND,
-                            builder.startObject().field("found", response.isFound()).endObject());
+                    return new BytesRestResponse(
+                        response.isFound() ? RestStatus.OK : RestStatus.NOT_FOUND,
+                        builder.startObject().field("found", response.isFound()).endObject()
+                    );
                 }
             });
     }
