@@ -7,21 +7,20 @@
 
 package org.elasticsearch.xpack.security.rest.action.saml;
 
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.security.action.saml.SamlSpMetadataAction;
 import org.elasticsearch.xpack.core.security.action.saml.SamlSpMetadataRequest;
 import org.elasticsearch.xpack.core.security.action.saml.SamlSpMetadataResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
@@ -34,8 +33,7 @@ public class RestSamlSpMetadataAction extends SamlBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(
-            new Route(GET, "/_security/saml/metadata/{realm}"));
+        return List.of(new Route(GET, "/_security/saml/metadata/{realm}"));
     }
 
     @Override
@@ -46,15 +44,18 @@ public class RestSamlSpMetadataAction extends SamlBaseRestHandler {
     @Override
     public RestChannelConsumer innerPrepareRequest(RestRequest request, NodeClient client) throws IOException {
         final SamlSpMetadataRequest SamlSpMetadataRequest = new SamlSpMetadataRequest(request.param("realm"));
-        return channel -> client.execute(SamlSpMetadataAction.INSTANCE, SamlSpMetadataRequest,
+        return channel -> client.execute(
+            SamlSpMetadataAction.INSTANCE,
+            SamlSpMetadataRequest,
             new RestBuilderListener<SamlSpMetadataResponse>(channel) {
-            @Override
-            public RestResponse buildResponse(SamlSpMetadataResponse response, XContentBuilder builder) throws Exception {
-                builder.startObject();
-                builder.field("metadata", response.getXMLString());
-                builder.endObject();
-                return new BytesRestResponse(RestStatus.OK, builder);
+                @Override
+                public RestResponse buildResponse(SamlSpMetadataResponse response, XContentBuilder builder) throws Exception {
+                    builder.startObject();
+                    builder.field("metadata", response.getXMLString());
+                    builder.endObject();
+                    return new BytesRestResponse(RestStatus.OK, builder);
+                }
             }
-        });
+        );
     }
 }
